# zelda-shrine-list

./: README.md  gen_list.ipynb  gen_list.py  pyproject.toml  zelda_shrine_list.md
